<resources>
    <string name="app_name">لعبة خمن</string>
    <string name="answerQuestion">الاجابة الصحيحة هي</string>
    <string name="answerQuestionTrue">نص الاجابة الصحيحة</string>
    <string name="returnButton">الرجوع</string>
    <string name="shareAnswer">شارك السؤال مع الاصدقاء</string>
    <string name="question">السؤال</string>
    <string name="share_add">ىشر ادخل عنوان</string>
    <string name="true_button">صحيح</string>
    <string name="false_button">خطا</string>
    <string name="text_game">لعبة خمن</string>
    <string name="change_lang_text">تغير اللغة</string>

    <string-array name="questions">
        <item>العملة الرسمية لدولة الكويت هي الريال الكويتي؟</item>
        <item>توبقال هي أعلى قمة جبلية في العالم العربي؟</item>
        <item>الجزائر هي أكبر دولة عربية من حيث المساحة؟</item>
        <item>الدار البيضاء هي عاصمة المغرب؟</item>
        <item>كابول هى عاصمة افغانستان؟</item>
        <item>اضخم الحيوانات اللافقرية هو القنديل؟</item>
        <item>الدولة العربية التي يمر بها خط الاستواء هى السودان؟</item>
        <item>القلب هو أكبر عضو في جسم الإنسان؟</item>
        <item>أول مسجد في الإسلام هو المسجد النبوي؟</item>
        <item>الخال الوحيد لأولاد عمتك هو والدك؟</item>
        <item>اولى دول العالم انتاجا للموز هى الاكوادور؟</item>
        <item>الأرجنتين عاصمتها باكو؟</item>
        <item>عملة فيتنام هى دونج؟</item>
    </string-array>

    <string-array name="answers_details">
        <item>العملة الرسمية لدولة الكويت هي الدينار الكوي</item>
        <item>توبقال هي أعلى قمة جبلية في العالم العربي و تقع في المغرب</item>
        <item>الجزائر هي أكبر دولة عربية و إفريقية من حيث المساحة</item>
        <item>الرباط هي عاصمة المغرب</item>
        <item>كابول هى عاصمة افغانستان</item>
        <item>اضخم الحيوانات اللافقرية هو الحبار</item>
        <item>الدولة العربية التي يمر بها خط الاستواء هى الصومال</item>
        <item>الكبد هو أكبر عضو في جسم الإنسان</item>
        <item>أول مسجد في الإسلام هو مسجد قباء</item>
        <item>الخال الوحيد لأولاد عمتك هو والدك</item>
        <item>اولى دول العالم انتاجا للموز هى الاكوادو</item>
        <item>الأرجنتين عاصمتها بونس إيرس</item>
        <item>عملة فيتنام هى دونج</item>
    </string-array>

    <string-array name="languages">
        <item>العربية</item>
        <item>English</item>
        <item>Francis</item>
    </string-array>

</resources>
